--- a/templates/docroot/styles.css
+++ b/templates/docroot/styles.css
@@ -6,7 +6,9 @@
 html, body {
   color: #000000;
   background-color: #ffffff;
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
+  font-family: Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
+
 }
 
 a:link    { color: #0000ff; }
