--- a/templates/docroot/styles.css
+++ b/templates/docroot/styles.css
@@ -7,23 +7,35 @@ html, body {
   color: #000000;
   background-color: #ffffff;
   /* font-family: sans-serif; */
-  font-family: Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
+  /*font-family: Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';*/
+  font: 13px / 1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+  width: 980px;
+  margin-right: auto;
+  margin-left: auto;
 
 }
 
+/*
 a:link    { color: #0000ff; }
 a:visited { color: #880088; }
 a:active  { color: #0000ff; }
+*/
+a:link    { color: rgb(64, 120, 192); }
+a:visited { color: rgb(64, 120, 192); }
+a:active  { color: rgb(64, 120, 192); }
 
 img { border: none; }
+
 table {
   width: 100%;
   margin: 0; 
   border: none;
 }
+
 table.auto {
   width: auto;
 }
+
 table.fixed {
   width: 100%;
   table-layout: fixed;
@@ -34,7 +46,19 @@ table.fixed td {
   white-space: nowrap;
 }
 tr, td, th { vertical-align: top; }
-th { white-space: nowrap; }
+th { white-space: nowrap; 
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 9px 10px 10px;
+    font-size: 14px;
+    line-height: 17px;
+    font-size: 13px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+}
+
+
 form { margin: 0; }
 
 
@@ -49,7 +73,7 @@ form { margin: 0; }
 
 /*** Navigation Headers ***/
 .vc_navheader {
-  background-color: #cccccc;
+ /* background-color: #cccccc;*/
   padding: .25em;
 }
 .vc_navheader .pathdiv {
@@ -61,11 +85,11 @@ form { margin: 0; }
 .vc_header {
   text-align: left;
   vertical-align: top;
-  background-color: #cccccc;
+ /* background-color: #cccccc; */
 }
 .vc_header_sort {
   text-align: left;
-  background-color: #88ff88;
+/*  background-color: #88ff88; */
 }
 
 
@@ -281,4 +305,55 @@ table.vc_idiff tbody th {
   background-color: red;
   color: white;
   padding: 0.5em;
+}
+
+
+/*** Readme box ***/
+div #readme {
+    margin-top: 20px
+}
+h3.readme-title {
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 9px 10px 10px;
+    font-size: 14px;
+    line-height: 17px;
+    display: block;
+    border-radius: 3px 3px 0px 0px;
+    border: 1px solid #d8d8d8;
+}
+div.readme-content {
+    background-color: #fff;
+    padding: 30px;
+    word-wrap: break-word;
+    border-radius: 0px 0px 3px 3px;
+    border: 1px solid #d8d8d8;
+    border-top: 0;
+}
+
+
+table.files {
+    border-radius: 3px 3px 3px 3px;
+    border: 1px solid #d8d8d8;
+}
+table.files td.message, td.author, td.ago {
+	color: rgb(136, 136, 136);
+}
+
+table.files td.revision {
+    color: rgb(96,96,96);
+}
+
+table.files tr {
+    line-height: 20px;
+}
+table.files td {
+     padding: 6px 2px 6px 10px;
+}
+
+.vc_navheader table {
+    border-radius: 3px 3px 3px 3px;
+    border: 1px solid #d8d8d8;
+    /* background-color: #cccccc; */
+    padding: .25em;
 }
