--- a/templates/docroot/styles.css
+++ b/templates/docroot/styles.css
@@ -20,9 +20,15 @@ a:link    { color: #0000ff; }
 a:visited { color: #880088; }
 a:active  { color: #0000ff; }
 */
-a:link    { color: rgb(64, 120, 192); }
+a:link    { color: rgb(64, 120, 192); 
+  text-decoration: none;
+}
 a:visited { color: rgb(64, 120, 192); }
 a:active  { color: rgb(64, 120, 192); }
+
+a:hover {
+  text-decoration: underline;
+}
 
 img { border: none; }
 
@@ -45,7 +51,7 @@ table.fixed td {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-tr, td, th { vertical-align: top; }
+/* tr, td, th { vertical-align: top; } */
 th { white-space: nowrap; 
     background-color: #f5f5f5;
     margin: 0;
@@ -68,6 +74,7 @@ form { margin: 0; }
   height: 16px;
   border: none;
   padding: 0 1px;
+  vertical-align: middle;
 }
 
 
@@ -75,6 +82,7 @@ form { margin: 0; }
 .vc_navheader {
  /* background-color: #cccccc;*/
   padding: .25em;
+  display: none;
 }
 .vc_navheader .pathdiv {
   padding: 0 3px;
@@ -357,3 +365,47 @@ table.files td {
     /* background-color: #cccccc; */
     padding: .25em;
 }
+
+
+/*** Dir Listing Rev Header ***/
+table.revheader {
+  width:100%;
+  border-radius: 3px 3px 3px 3px;
+  border: 1px solid #d8d8d8;
+  padding: 5px 10px;
+
+}
+
+table.revheader .sticky {
+  text-align: center;
+  width: 300px;
+/*  border-radius: 3px 3px 3px 3px;
+  border: 1px solid #d8d8d8;
+*/
+  padding: 5px 10px;
+  color: rgb(136, 136, 136);
+}
+
+table.revheader .path {
+  font-size: medium;
+  padding-left: 10px;
+
+}
+
+table.revheader .dirrevision {
+    width: 100px;
+/*    border-radius: 3px 3px 3px 3px;
+    border: 1px solid #d8d8d8;
+*/
+    padding: 5px 10px;
+}
+table.revheader .filesshown {
+  text-align: center;
+/*  border-radius: 3px 3px 3px 3px;
+  border: 1px solid #d8d8d8;
+*/
+  padding: 5px 10px;
+  color: rgb(136, 136, 136);
+}
+
+/***  ***/
